<resources>
    <string name="app_name">KannadaRiddles</string>
    <string name="hint_answer">ನಿಮ್ಮ ಉತ್ತರ</string>
    <string name="clue">ಸುಳಿವು</string>
    <string name="answer">ಉತ್ತರ</string>
    <string name="submit_anser">ಉತ್ತರವನ್ನು ಸಲ್ಲಿಸಿ</string>
    <string name="empty_answer">ದಯವಿಟ್ಟು ಉತ್ತರಿಸಿ</string>
    <string name="correct_answer">ಸರಿಯಾದ ಉತ್ತರ</string>
    <string name="wrong_answer">ತಪ್ಪು ಉತ್ತರ</string>
    <string name="or">OR</string>
    <string name="loading_awesome_riddles">Loading awesome riddles...</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="answered_already">ಉತ್ತರಿಸಲಾಗಿದೆ!!</string>
    <string name="total_questions">Total Questions:</string>
    <string name="with_clue">Answered with Clue:</string>
    <string name="without_clue">Answered without clue:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="riddle">ಒಗಟು</string>
    <string name="answer_">ಉತ್ತರಿಸಿ</string>
    <string name="mic_to_input_through_voice">Mic to input through voice</string>
</resources>
